docs: CHANGELOG for v0.5.0-beta (#174)
Co-authored-by: Claude Opus 5 (1M context) <noreply@anthropic.com>